--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
             name = 'impactdevelopment-repo'
             url = 'https://impactdevelopment.github.io/maven/'
         }
-        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -25,8 +24,10 @@ apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
 version = '1.0.0'
-group = 'com.example' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'Example Addon'
+group = 'com.rettichlp.UnicacityAddon' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'UnicacityAddon'
+
+compileJava.options.encoding = 'UTF-8'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
@@ -34,7 +35,7 @@ def mcpVersion = [channel: 'snapshot', version: '20201028-1.16.3']
 
 mixin {
     defaultObfuscationEnv searge
-    add sourceSets.main, "example.refmap.json"
+    add sourceSets.main, "unicacityAddon.refmap.json"
 }
 
 minecraft {
@@ -84,11 +85,13 @@ dependencies {
     minecraft 'com.github.ImpactDevelopment:Vanilla:1.16.5'
     compile(files('libs/lm_api_mc1.16.5.jar'))
 
-    compile("org.ow2.asm:asm-analysis:6.2") { transitive = false }
-    compile("org.ow2.asm:asm-util:6.2") { transitive = false }
-    compile("org.ow2.asm:asm-commons:6.2") { transitive = false }
+    compile('org.ow2.asm:asm-analysis:9.3') { transitive = false }
+    compile('org.ow2.asm:asm-util:9.3') { transitive = false }
+    compile('org.ow2.asm:asm-commons:9.3') { transitive = false }
     compile("org.spongepowered:mixin:0.8.2") { transitive = false }
     compile("net.minecraft:launchwrapper:1.12") { transitive = false }
+
+    implementation 'org.reflections:reflections:0.10.2'
 }
 
 jar {
