--- a/.gitignore
+++ b/.gitignore
@@ -25,61 +25,20 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-.idea/**/misc.xml
-.idea/**/discord.xml
-.idea/**/encodings.xml
-.idea/codeStyles/
-.idea/sonarlint/
+/.idea/
 
 # Generated files
-.idea/**/contentModel.xml
-.idea/**/jarRepositories.xml
-.idea/**/uiDesigner.xml
-.idea/**/inspectionProfiles
-.idea/**/.name
-.idea/**/vcs.xml
-.idea/**/compiler.xml
-.idea/**/runClient.xml
-run/**
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/dbnavigator.xml
-.idea/kotlinScripting.xml
-
-# Git toolbox
-.idea/git_toolbox_prj.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+run/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-.idea/modules.xml
-.idea/*.iml
-# .idea/modules
 # *.iml
 # *.ipr
 
 # CMake
 cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
 
 # File-based project format
 *.iws
@@ -87,26 +46,14 @@ cmake-build-*/
 # IntelliJ
 out/
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
 # JIRA plugin
 atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
-# Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
 
 ### Gradle template
 .gradle
@@ -124,10 +71,7 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
-.idea/modules/
 src/test/
 **/src/main/generated/*
 
-.idea/intellij-javadocs-4.0.1.xml
-run/
 libs/
