Add branch develop to gradle.yml build action

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,10 +5,12 @@ on:
     branches:
     - master
     - main
+    - develop
   pull_request:
     branches:
     - master
     - main
+    - develop
 
 jobs:
   build:
