--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     compile("org.spongepowered:mixin:0.8.2") { transitive = false }
     compile("net.minecraft:launchwrapper:1.12") { transitive = false }
 
-    implementation 'org.reflections:reflections:0.10.2'
+    // implementation 'org.reflections:reflections:0.10.2'
 }
 
 jar {
