--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ repositories {
     mavenLocal()
 }
 
+configurations {
+    extraLibs
+}
 
 dependencies {
     annotationProcessor("org.spongepowered:mixin:0.8.2:processor")
@@ -91,11 +94,17 @@ dependencies {
     compile("org.spongepowered:mixin:0.8.2") { transitive = false }
     compile("net.minecraft:launchwrapper:1.12") { transitive = false }
 
+    implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'org.reflections:reflections:0.10.2'
+
+    extraLibs compile(files('libs/reflections-0.10.2.jar'))
+    configurations.compile.extendsFrom(configurations.extraLibs)
 }
 
 jar {
-    // Excludes the start file
+    from {
+        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
+    }
     exclude("**/launch")
 }
 
