--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,8 @@ repositories {
 }
 
 configurations {
-    extraLibs
+    shade
+    compile.extendsFrom(shade)
 }
 
 dependencies {
@@ -95,17 +96,18 @@ dependencies {
     compile("net.minecraft:launchwrapper:1.12") { transitive = false }
 
     implementation 'org.jetbrains:annotations:23.0.0'
-    implementation 'org.reflections:reflections:0.10.2'
 
-    extraLibs compile(files('libs/reflections-0.10.2.jar'))
-    configurations.compile.extendsFrom(configurations.extraLibs)
+    implementation 'org.reflections:reflections:0.10.2'
+    shade fileTree(dir: 'libs', include: 'reflections-0.10.2.jar')
 }
 
 jar {
-    from {
-        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
-    }
     exclude("**/launch")
+    configurations.shade.each { dep ->
+        from(project.zipTree(dep)) {
+            exclude 'META-INF', 'META-INF/**'
+        }
+    }
 }
 
 task downloadAPI(type: Download) {
