--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ dependencies {
 
     minecraft 'com.github.ImpactDevelopment:Vanilla:1.16.5'
     compile(files('libs/lm_api_mc1.16.5.jar'))
-    compile(files('libs/reflections-0.10.2.jar'))
+    // compile(files('libs/reflections-0.10.2.jar'))
 
     compile('org.ow2.asm:asm-analysis:9.3') { transitive = false }
     compile('org.ow2.asm:asm-util:9.3') { transitive = false }
@@ -94,6 +94,7 @@ dependencies {
     compile("net.minecraft:launchwrapper:1.12") { transitive = false }
 
     implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'org.reflections:reflections:0.10.2'
 }
 
 jar {
@@ -112,6 +113,6 @@ task downloadAPI(type: Download) {
     src "https://dl.labymod.net/latest/api/files/lm_api_mc1.16.5.jar"
     dest 'libs/'
 
-    src "https://github.com/ronmamo/reflections/releases/download/0.10.2/reflections-0.10.2.jar"
-    dest 'libs/'
+    // src "https://github.com/ronmamo/reflections/releases/download/0.10.2/reflections-0.10.2.jar"
+    // dest 'libs/'
 }
